<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Safetee</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="donate">Donate</string>

    <!--String related to Circle of Trust-->
    <string name="circle_title">Circle of Trust</string>
    <string name="home_title">A Safety Resource for Peace Corps Volunteers</string>
    <string name="helping">Helping</string>
    <string name="friends_and_community">Friends and community members</string>
    <string name="learn_effect">learn about the effect of Sexual Assault</string>
    <string name="bystander">Bystander intervention tactics</string>
    <string name="predator_tactic">Predator tactics</string>
    <string name="predator_tactic_title">Tactics of Sexual Predators</string>
    <string name="comrade1">Name 1</string>
    <string name="comrade2">Name 2</string>
    <string name="comrade3">Name 3</string>
    <string name="comrade4">Name 4</string>
    <string name="comrade5">Name 5</string>
    <string name="comrade6">Name 6</string>
    <string name="slide_one_head">Just a few Steps on how to use</string>
    <string name="slide_one_button">Circle Of Trust</string>
    <string name="slide_three_head">Circle Of Trust</string>
    <string name="slide_three_bottom">Select the message you want to send from here!</string>
    <string name="slide_four_head">The message will be sent to 6 contacts for immediate intervention</string>
    <string name="slide_four_bottom">Done</string>
    <string name="add_comrades_text">Add Your Emergency Contacts </string>
    <string name="duplicate_number_errormessage">Duplicate Number! Please enter again</string>

    <string name="select_request">Select Request</string>
    <string name="come_get_me">I Need Help</string>
    <string name="need_interruption">Call I Need an Interruption</string>
    <string name="need_to_talk">I Need to Talk</string>
    <string name="cancel">Cancel</string>
    <string name="come_get_me_message">Come and get me. I need help getting home Safely. Call ASAP to get my Location. Sent through Safetee\'s Circle of Friends.</string>
    <string name="come_get_me_message_with_location">Come and get me. I need help getting home Safely. My location( #LOC_URL# ). Sent through Safetee\'s Circle of Friends.</string>
    <string name="message_with_footer">sent via Safetee\'s Circle of Friends.</string>
    <string name="interruption_message">Call and pretend you need me. I need an interruption. Message sent through Safetee\'s Circle of Friends</string>
    <string name="need_to_talk_message">I need to talk. Message sent through First Aide\'s Circle of Trust</string>
    <string name="msg_sent">Message sent</string>
    <string name="ok">OK</string>
    <string name="message_failed">Message Sending Failed for contact </string>
    <string name="no_phone_number">No phone number found</string>
    <string name="choose_number">Choose a number</string>
    <string name="circle_of_trust_slide_two">When you are feeling insecure or need your emergency contacts\' attention.\nPress the button</string>
    <string name="confirmation_message1">Help request is being sent to</string>
    <string name="confirmation_message2">friends.</string>
    <string name="confirmation_message3">friend.</string>
    <string name="no_comrade_title">No Contacts Registered</string>
    <string name="no_comrade_msg">Failed to send message since no contacts have been registered</string>
    <string name="add_comrades_save">Save</string>
    <string name="message_options">Message Template</string>

    <!--Trustees-->
    <string name="updated_phone_numbers">"Your Emergency Contacts' phone numbers have been updated"</string>
    <string name="not_updated_phone_numbers">No changes detected</string>
    <string name="updated_phone_numbers_fail">"Unable to update your contacts' phone numbers"</string>
    <string name="dialog_tag">Alert_Dialog</string>
    <string name="network_unavailable">Please check your network connection and try again</string>
    <string name="first_aide">First Aide</string>
    <string name="sms_send_fail">Failed</string>
    <string name="sms_send_pass">Sent</string>
    <string name="log_title">SMS Log Report</string>
    <string name="receive_log">You\'ll receive the delivery report shortly</string>
    <string name="safety_tools">Safety Tools</string>
    <string name="support_services">Support Services</string>
    <string name="sexual_assault_awareness">Sexual Assault Awareness</string>
    <string name="policies_glossary">Policies and Glossary</string>
    <string name="radar">RADAR</string>
    <string name="unwanted_attention">Dealing with Unwanted Attention</string>
    <string name="unwanted_attention_title">Unwanted Attention</string>
    <string name="commonalities">Commonalities of Sexual Predators</string>
    <string name="bystander_intervention">Bystander Intervention</string>
    <string name="safety_plan_basics">Safety Plan Basics</string>
    <string name="safety_plan">Safety Plan Worksheet</string>
    <string name="safety_plan_title">Safety Plan</string>
    <string name="benefits">Benefits of Seeking Staff Support</string>
    <string name="available_services">Services after a Sexual Assault</string>
    <string name="commitment">PCs commitment to Sexual Assault</string>
    <string name="after_assault">What to do After an Assault?</string>
    <string name="mythbusters">Peace Corps Mythbusters</string>
    <string name="was_assault">Was it Sexual Assault?</string>
    <string name="common_questions">Sexual Assault Common Questions</string>
    <string name="impact">Impact of Sexual Assault</string>
    <string name="harassment">Sexual Harassment</string>
    <string name="summary_sheet">Peace Corps Policies</string>
    <string name="glossary">Glossary</string>
    <string name="further_resources">Further Resources</string>
    <string name="settings">Settings</string>
    <string name="user_login">User logged in : </string>
    <string name="title_activity_lol_bar">LolBarActivity</string>
    <string name="unregistered">Register</string>
    <string name="title_activity_friends_list">Friends List</string>


    <!--Added by Abdul-->
    <string name="app_description">Safetee App Android</string>
    <string name="pref_copyright_description">Copyleft © 2016 GetSafetee</string>
    <string name="find_us_on">Find us on:</string>

    <!-- Recording name dialog -->
    <string name="recording_name">Recording name</string>

    <!-- Navigation drawer items -->
    <string name="record">Record</string>
    <string name="my_recordings">Records</string>
    <string name="about">About</string>

    <!-- Content description for ImageViews -->
    <string name="app_icon_cd">Application icon</string>

    <!-- About app -->
    <string name="developed_by">Developed by</string>
    <string name="concept_by">Concept and design</string>
    <string name="copyright_text">Copyleft © 2016 GetSafetee</string>

    <!-- No idea where these are used -->
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

    <!-- UI states -->
    <string name="touch_mic_to_start">Touch the microphone\nto start recording</string>
    <string name="stop">Stop</string>
    <string name="state_recording">Recording…</string>
    <string name="no_recordings">No records</string>

    <!-- Preferences -->
    <string name="kitkat_translucent_navbar_title">Translucent navigation bar</string>
    <string name="kitkat_translucent_navbar_summary">Enables navigation bar translucency on KitKat (status bar not enabled)</string>
    <string name="back_button_always_quits_title">Back buttons always quits app</string>
    <string name="back_button_always_quits_summary">When disabled, the back button will always go to new recordings first</string>
    <string name="requires_restart">For this change to take effect, an app restart is required</string>

    <!-- Errors -->
    <string name="failed_to_create_dir">Failed to create directory where records will be saved</string>
    <string name="file_not_found">Record not found, removing from list</string>

    <string-array name="recording_list_menu_options">
        <item>Rename</item>
        <item>Get Support</item>
        <item>Play</item>
    </string-array>

    <string name="recording_deleted">Record deleted</string>
    <string name="title_activity_donate_with_isw">Donate</string>
    <string name="dialog_message">Choose NGO</string>
    <string name="dialog_title">Support an NGO</string>
    <string name="title_activity_report">Report</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_pin">Set Pin</string>
    <string name="prompt_fullname">Full Name</string>
    <string name="sign_in_message">Safetee will send a one time SMS message to verify your phone number, carrier SMS charges will not apply. </string>
    <string name="action_sign_in">Continue</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="why_auto_upload">Auto upload is a feature that uploads your recording to safetee immediately after recording completes for safe keeping of record in case your phone gets damaged or lost. </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_safety_tips">Safety Tips</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="back"><![CDATA[<]]></string>
    <string name="rewind"><![CDATA[<<]]></string>
    <string name="forward"><![CDATA[>>]]></string>
    <string name="pause">||</string>

    <string name="reportsent">Your request for support was successfully received, an agency will get in touch you shortly.</string>

</resources>

